--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.beetlecircus.serializabledictionary": "0.1.2-preview.5",
     "com.cysharp.unitask": "2.5.10",
     "com.dbrizov.naughtyattributes": "2.1.4",
+    "com.github-glitchenzo.nugetforunity": "4.4.0",
     "com.mirror.steamworks.net": "https://github.com/Chykary/FizzySteamworks.git?path=/com.mirror.steamworks.net",
     "com.rlabrecque.steamworks.net": "2024.8.0",
     "com.unity.2d.aseprite": "1.1.9",
