--- a/Assets/Scripts/Utils/Utility.asmdef
+++ b/Assets/Scripts/Utils/Utility.asmdef
@@ -2,7 +2,9 @@
     "name": "Utility",
     "rootNamespace": "Retronia.Utils",
     "references": [
-        "GUID:41524c21c95e5fe4dbc5b48bd21995a4"
+        "GUID:41524c21c95e5fe4dbc5b48bd21995a4",
+        "GUID:343deaaf83e0cee4ca978e7df0b80d21",
+        "GUID:2bafac87e7f4b9b418d9448d219b01ab"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
