--- a/Assets/Scripts/Utils/Utility.asmdef
+++ b/Assets/Scripts/Utils/Utility.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:41524c21c95e5fe4dbc5b48bd21995a4",
         "GUID:343deaaf83e0cee4ca978e7df0b80d21",
-        "GUID:2bafac87e7f4b9b418d9448d219b01ab"
+        "GUID:2bafac87e7f4b9b418d9448d219b01ab",
+        "GUID:776d03a35f1b52c4a9aed9f56d7b4229"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
