--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -100,6 +100,13 @@
       "scopes": [
         "com.dbrizov.naughtyattributes"
       ]
+    },
+    {
+      "name": "backndworld",
+      "url": "https://registry.npmjs.org",
+      "scopes": [
+        "com.backnd.world"
+      ]
     }
   ]
 }
