--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.2d.spriteshape": "9.0.5",
     "com.unity.2d.tilemap.extras": "3.1.3",
     "com.unity.adaptiveperformance": "4.0.1",
+    "com.unity.adaptiveperformance.samsung.android": "5.0.0",
     "com.unity.addressables": "1.21.21",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.feature.2d": "2.0.0",
